--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
